syntax = "proto3";

package gprc.tutorial.topic;

service TopicService {
  rpc CreateTopic(Topic) returns (Response) {}
  rpc GetTopics(GetRequest) returns (Response) {}
}

message Topic {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 price = 4;
  string category_id = 5;
}

message GetRequest {}

message Response {
  bool created = 1;
  Topic topic = 2;
  repeated Topic topics = 3;
}
